NetBSD Problem Report #50633

From brad.harder@gmail.com  Fri Jan  8 20:10:36 2016
Return-Path: <brad.harder@gmail.com>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id BA7D07ABC0
	for <gnats-bugs@gnats.NetBSD.org>; Fri,  8 Jan 2016 20:10:36 +0000 (UTC)
Message-Id: <CABfrOT8cQ+Ry1emAtRs6PjNcW=2shZmC8Q+q6wZRP=ho6AswXQ@mail.gmail.com>
Date: Fri, 8 Jan 2016 12:10:34 -0800
From: bch <brad.harder@gmail.com>
Reply-To:
To: gnats-bugs <gnats-bugs@netbsd.org>
Subject: sys/ktrace.h not pulling-in all deps (params.h)

>Number:         50633
>Category:       lib
>Synopsis:       sys/ktrace.h not pulling all required deps
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Jan 08 20:15:00 +0000 2016
>Closed-Date:    Sat Mar 19 17:19:46 +0000 2016
>Last-Modified:  Sat Mar 19 17:19:46 +0000 2016
>Originator:     bch <brad.harder@gmail.com>
>Release:        NetBSD 7.99.25
>Organization:
        method logic digital
>Environment:
System: NetBSD strathcona 7.99.25 NetBSD 7.99.25 (GENERIC) #211: Tue
Jan 5 10:17:33 PST 2016
root@strathcona:/usr/obj/sys/arch/amd64/compile/GENERIC amd64
Architecture: x86_64
Machine: amd64
>Description:
        pulling headers for ktrace(2) as descibed in the manpage and
trying to build a program results in:

/usr/include/sys/ktrace.h:67:16: error: 'MAXCOMLEN' undeclared here
(not in a function)
  char ktr_comm[MAXCOMLEN+1]; /* command name */
                ^
/usr/include/sys/ktrace.h:158:2: error: unknown type name 'sig_t'
  sig_t action;
  ^
/usr/include/sys/ktrace.h:159:2: error: unknown type name 'sigset_t'
  sigset_t mask;
  ^
>How-To-Repeat:

#include <sys/types.h>
#include <sys/uio.h>
#include <sys/ktrace.h>

int
main (int argc, char *argv[]) {
  return 0;
}

>Fix:


--- ./sys/ktrace.old    2016-01-08 11:58:02.000000000 -0800
+++ ./sys/ktrace.h      2016-01-08 12:06:32.000000000 -0800
@@ -36,6 +36,8 @@

 #include <sys/mutex.h>
 #include <sys/lwp.h>
+#include <sys/param.h>

 /*
  * operations to ktrace system call  (KTROP(op))

>Release-Note:

>Audit-Trail:
From: Joerg Sonnenberger <joerg@britannica.bec.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: lib/50633: sys/ktrace.h not pulling-in all deps (params.h)
Date: Fri, 8 Jan 2016 22:22:02 +0100

 On Fri, Jan 08, 2016 at 08:15:00PM +0000, bch wrote:
 > --- ./sys/ktrace.old    2016-01-08 11:58:02.000000000 -0800
 > +++ ./sys/ktrace.h      2016-01-08 12:06:32.000000000 -0800
 > @@ -36,6 +36,8 @@
 > 
 >  #include <sys/mutex.h>
 >  #include <sys/lwp.h>
 > +#include <sys/param.h>
 > 
 >  /*
 >   * operations to ktrace system call  (KTROP(op))
 > 

 This is *not* an acceptable fix. sys/param.h is about the worst
 namespace pollution possible.

 Joerg

From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50633 CVS commit: src/sys/sys
Date: Sat, 19 Mar 2016 17:04:12 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Mar 19 17:04:12 UTC 2016

 Modified Files:
 	src/sys/sys: ktrace.h

 Log Message:
 PR 50633 and PR 50634 from Brad Harder: add missing includes:
 sys/signal.h and sys/time.h. Also add sys/uio.h which is needed and
 for some probably historical/obsolete reason has been documented as a
 prerequisite instead of included directly.

 This also requires sys/param.h for MAXCOMLEN (blah) but for now at
 least shift that to the documentation instead of including it
 directly as it's a sewer.


 To generate a diff of this commit:
 cvs rdiff -u -r1.62 -r1.63 src/sys/sys/ktrace.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50633 CVS commit: src/lib/libc/sys
Date: Sat, 19 Mar 2016 17:05:36 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sat Mar 19 17:05:36 UTC 2016

 Modified Files:
 	src/lib/libc/sys: ktrace.2

 Log Message:
 Update documented prerequisite includes. PR 50633 and PR 50634.

 Remove sys/uio.h, and swap sys/param.h for sys/types.h as sys/ktrace.h
 depends on MAXCOMLEN.

 Bump date; first time since 1993.


 To generate a diff of this commit:
 cvs rdiff -u -r1.18 -r1.19 src/lib/libc/sys/ktrace.2

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sat, 19 Mar 2016 17:19:46 +0000
State-Changed-Why:
fixed, thanks
(but I made sys/param.h a documented prereq rather than including it, so
proceed accordingly)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.