PR 50633 and PR 50634 from Brad Harder: add missing includes: sys/signal.h and sys/time.h. Also add sys/uio.h which is needed and for some probably historical/obsolete reason has been documented as a prerequisite instead of included directly.

This also requires sys/param.h for MAXCOMLEN (blah) but for now at
least shift that to the documentation instead of including it
directly as it's a sewer.